@@ -166,7 +166,7 @@
 : <a class="el" href="group__rfcnumbers.html#ga44">libirc_rfcnumeric.h</a><li>LIBIRC_RFC_RPL_YOURESERVICE
 : <a class="el" href="group__rfcnumbers.html#ga46">libirc_rfcnumeric.h</a><li>LIBIRC_RFC_RPL_YOURHOST
 : <a class="el" href="group__rfcnumbers.html#ga1">libirc_rfcnumeric.h</a></ul>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:07 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
