@@ -57,7 +57,7 @@
 : <a class="el" href="group__errors.html#ga1">libircclient.h</a><li>irc_target_get_host()
 : <a class="el" href="group__nnparse.html#ga1">libircclient.h</a><li>irc_target_get_nick()
 : <a class="el" href="group__nnparse.html#ga0">libircclient.h</a></ul>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:07 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
