@@ -444,7 +444,7 @@ Possible error responces for this command from the RFC1459:<ul>
     </td>
   </tr>
 </table>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
