@@ -16,7 +16,7 @@ This file contains Doxygen modules.
 <dl compact><dt><b>Author:</b></dt><dd>Georgy Yunaev </dd></dl>
 <dl compact><dt><b>Version:</b></dt><dd>1.0 </dd></dl>
 <dl compact><dt><b>Date:</b></dt><dd>09.2004 </dd></dl>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
