@@ -24,7 +24,7 @@
 <li><a class="el" href="group__rfcnumbers.html">Numeric reply codes from RFC1459</a>
 <li><a class="el" href="group__colors.html">Messages colors manipulation</a>
 </ul>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:07 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
