@@ -648,7 +648,7 @@ The "unknown" event is triggered upon receipt of any number of unclassifiable mi
 </table>
 <hr>The documentation for this struct was generated from the following file:<ul>
 <li><a class="el" href="libirc__events_8h.html">libirc_events.h</a></ul>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
